# DynamicAssetAllocation

./: .gitignore  Entrega 1.docx  README.md  main.py  ppt final.pptx  pyproject.toml
