[project]
name = "dynamicassetallocation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "scikit-learn>=1.7.1",
    "scipy-stubs>=1.16.1.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
    "yfinance>=0.2.65",
]
